BUG #69655 - Avoid labels overlapping prefilled content for input field in forms

--- a/app/assets/stylesheets/grid_form.scss
+++ b/app/assets/stylesheets/grid_form.scss
@@ -9,13 +9,6 @@
   .field {
     padding: 1em 0 1em 0;
     margin: 0;
-    .awesomplete {
-      width: 100%;
-      input[type=text] {
-        height: 1.5rem;
-        margin: 0;
-      }
-    }
   }
   .submit {
     float: right;
